# media_gst

./: .flutter-plugins-dependencies  .gitignore  .metadata  AGENTS.md  ENV.md  README.md  SPEC.md  TODO.md  flutter_rust_bridge.yaml  pubspec.yaml  run_example.ps1
.github/: gemini.yaml
example/: README.md  media_gst_example.dart  pubspec.yaml
example/integration_test/: plugin_integration_test.dart
example/lib/: main.dart
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
hook/: build.dart
integration_test/: simple_test.dart
lib/: main.dart  media_gst.dart  media_gst_method_channel.dart  media_gst_platform_interface.dart
lib/src/: gst_video_player.dart
lib/src/rust/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  player_instance.dart  player_instance.freezed.dart
lib/src/widgets/: gst_player.dart
rust/: Cargo.toml  build.rs  rust-toolchain.toml
rust/.cargo/: config.toml  config.toml.example
rust/bridge/: Cargo.toml  build.rs
rust/bridge/src/: api.rs  frb_generated.rs  lib.rs  media_core.rs  player_instance.rs
rust/core/: Cargo.toml  build.rs
rust/core/src/: lib.rs
rust/src/: api.rs  frb_generated.rs  lib.rs  player_instance.rs
rust/src/sink/: android.rs  mod.rs  windows.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_media_gst.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_media_gst.podspec
rust_builder/windows/: CMakeLists.txt
test/: media_gst_method_channel_test.dart  media_gst_test.dart
tmp/: patch_frb.dart
windows/: CMakeLists.txt  media_gst_plugin.cpp
windows/flutter/: generated_plugins.cmake
windows/include/media_gst/: media_gst_plugin.h
windows/runner/: Runner.rc  main.cpp
