[package]
name = "media_gst"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
tokio = { version = "1.50", features = ["full"] }
uuid = { version = "1.23", features = ["v4", "serde"] }
anyhow = "1.0"
gstreamer = "0.22"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[build-dependencies]
flutter_rust_bridge_codegen = "=2.11.1"
anyhow = "1.0"
