[package]
name = "media_gst_native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
# flutter_rust_bridge_codegen 자동 생성 활성화
codegen = []
default = []

[dependencies]
# flutter_rust_bridge v2
flutter_rust_bridge = "=2.11.1"
anyhow = "=1.0.86"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
tokio = { version = "=1.43.0", features = ["rt-multi-thread", "macros"] }
uuid = { version = "=1.13.1", features = ["v4"] }

# GStreamer dependencies moved from core
gstreamer = "=0.25.1"
gstreamer-video = "=0.25.0"
gstreamer-app = "=0.25.0"

[build-dependencies]
# flutter_rust_bridge v2
flutter_rust_bridge = "=2.11.1"
flutter_rust_bridge_codegen = "=2.11.1"
