[package]
name = "media_gst_core"
version = "0.1.0"
edition = "2021"

[dependencies]
gstreamer = "=0.25.0"
gstreamer-video = "=0.25.0"
gstreamer-app = "=0.25.0"
anyhow = "=1.0.86"
parking_lot = "0.12"
log = "0.4"
tokio = { version = "=1.43.0", features = ["full"] }
uuid = { version = "=1.13.1", features = ["v4"] }
